--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SECRET_KEY=your-secret-key
+SECRET_KEY='django-insecure-1vtz@au=#_(@(_-+@5bi-^3^4l&^%sb%gd)tvl%10&=xjv#_yx'
 DEBUG=True
-GOOGLE_API_KEY=your-key
+GOOGLE_API_KEY='your-key'
